Crash in system dictionary initialization with shared strings

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b72
    • x86_64
    • solaris
    • Verified

        Crash in several tests on Solaris:


        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/jprt/T/P1/234032.mseledtsov/s/hotspot/src/share/vm/classfile/javaClasses.cpp:445), pid=21794, tid=0x0000000000000002
        # assert(java_string->klass() == SystemDictionary::String_klass()) failed: must be java_string
        #
        # JRE version: (9.0) (build )
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-fastdebug-20150615234032.mseledtsov.hs-rt-b00 mixed mode, sharing solaris-amd64 compressed oops)



        Current thread (0x0000000000421800): JavaThread "Unknown thread" [_thread_in_vm, id=2, stack(0xfffffd7ffc37f000,0xfffffd7ffc47f000)]

        Stack: [0xfffffd7ffc37f000,0xfffffd7ffc47f000], sp=0xfffffd7ffc4794d0, free space=1001k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x1daece8] void VMError::report(outputStream*)+0xb18;; __1cHVMErrorGreport6MpnMoutputStream__v_+0xb18
        V [libjvm.so+0x1db0211] void VMError::report_and_die()+0x5b1;; __1cHVMErrorOreport_and_die6M_v_+0x5b1
        V [libjvm.so+0x1192f3e] void report_vm_error(const char*,int,const char*,const char*)+0x7e;; __1cPreport_vm_error6Fpkci11_v_+0x7e
        V [libjvm.so+0x1501c60] bool java_lang_String::equals(oop,unsigned short*,int)+0x400;; __1cQjava_lang_StringGequals6FnDoop_pHi_b_+0x400
        V [libjvm.so+0x1c26171] oop CompactHashtable<oop,char>::lookup(const char*,unsigned,int)+0x411;; __1cQCompactHashtable4nDoop_Cc_Glookup6MpkcIi_n0A__+0x411
        V [libjvm.so+0x1c2121b] oop StringTable::intern(Handle,unsigned short*,int,Thread*)+0x4b;; __1cLStringTableGintern6FnGHandle_pHipnGThread__nDoop__+0x4b
        V [libjvm.so+0x1c2188e] oop StringTable::intern(Symbol*,Thread*)+0x5e;; __1cLStringTableGintern6FpnGSymbol_pnGThread__nDoop__+0x5e
        V [libjvm.so+0x1177a0d] oop ConstantPool::uncached_string_at(int,Thread*)+0x2d;; __1cMConstantPoolSuncached_string_at6MipnGThread__nDoop__+0x2d
        V [libjvm.so+0x1281a1e] oop fieldDescriptor::string_initial_value(Thread*)const+0x4e;; __1cPfieldDescriptorUstring_initial_value6kMpnGThread__nDoop__+0x4e
        V [libjvm.so+0x1502996] void initialize_static_field(fieldDescriptor*,Handle,Thread*)+0x1e6;; __1cXinitialize_static_field6FpnPfieldDescriptor_nGHandle_pnGThread__v_+0x1e6
        V [libjvm.so+0x1490c6a] void InstanceKlass::do_local_static_fields_impl(instanceKlassHandle,void(*)(fieldDescriptor*,Handle,Thread*),Handle,Thread*)+0x27a;; __1cNInstanceKlassbBdo_local_static_fields_impl6FnTinstanceKlassHandle_pFpnPfieldDescriptor_nGHandle_pnGThread__v46_v_+0x27a
        V [libjvm.so+0x1490999] void InstanceKlass::do_local_static_fields(void(*)(fieldDescriptor*,Handle,Thread*),Handle,Thread*)+0x59;; __1cNInstanceKlassWdo_local_static_fields6MpFpnPfieldDescriptor_nGHandle_pnGThread__v35_v_+0x59
        V [libjvm.so+0x1503f9a] void java_lang_Class::initialize_mirror_fields(KlassHandle,Handle,Handle,Thread*)+0x20a;; __1cPjava_lang_ClassYinitialize_mirror_fields6FnLKlassHandle_nGHandle_2pnGThread__v_+0x20a
        V [libjvm.so+0x1504a36] void java_lang_Class::create_mirror(KlassHandle,Handle,Handle,Thread*)+0xa56;; __1cPjava_lang_ClassNcreate_mirror6FnLKlassHandle_nGHandle_2pnGThread__v_+0xa56
        V [libjvm.so+0x17c2e0a] void Klass::restore_unshareable_info(ClassLoaderData*,Handle,Thread*)+0x17a;; __1cFKlassYrestore_unshareable_info6MpnPClassLoaderData_nGHandle_pnGThread__v_+0x17a
        V [libjvm.so+0x1495b56] void InstanceKlass::restore_unshareable_info(ClassLoaderData*,Handle,Thread*)+0x36;; __1cNInstanceKlassYrestore_unshareable_info6MpnPClassLoaderData_nGHandle_pnGThread__v_+0x36
        V [libjvm.so+0x1ca034b] instanceKlassHandle SystemDictionary::load_shared_class(instanceKlassHandle,Handle,Handle,Thread*)+0x21b;; __1cQSystemDictionaryRload_shared_class6FnTinstanceKlassHandle_nGHandle_2pnGThread__1_+0x21b
        V [libjvm.so+0x1ca0080] instanceKlassHandle SystemDictionary::load_shared_class(Symbol*,Handle,Thread*)+0xb0;; __1cQSystemDictionaryRload_shared_class6FpnGSymbol_nGHandle_pnGThread__nTinstanceKlassHandle__+0xb0
        V [libjvm.so+0x1ca0cfc] instanceKlassHandle SystemDictionary::load_instance_class(Symbol*,Handle,Thread*)+0x5cc;; __1cQSystemDictionaryTload_instance_class6FpnGSymbol_nGHandle_pnGThread__nTinstanceKlassHandle__+0x5cc
        V [libjvm.so+0x1c9dfb8] Klass*SystemDictionary::resolve_instance_class_or_null(Symbol*,Handle,Handle,Thread*)+0xc28;; __1cQSystemDictionarybEresolve_instance_class_or_null6FpnGSymbol_nGHandle_3pnGThread__pnFKlass__+0xc28
        V [libjvm.so+0x1c9b70a] Klass*SystemDictionary::resolve_or_null(Symbol*,Handle,Handle,Thread*)+0x24a;; __1cQSystemDictionaryPresolve_or_null6FpnGSymbol_nGHandle_3pnGThread__pnFKlass__+0x24a
        V [libjvm.so+0x1c9b121] Klass*SystemDictionary::resolve_or_fail(Symbol*,Handle,Handle,bool,Thread*)+0x31;; __1cQSystemDictionaryPresolve_or_fail6FpnGSymbol_nGHandle_3bpnGThread__pnFKlass__+0x31
        V [libjvm.so+0x1ca3951] void SystemDictionary::initialize_wk_klasses_until(SystemDictionary::WKID,SystemDictionary::WKID&,Thread*)+0x431;; __1cQSystemDictionarybBinitialize_wk_klasses_until6Fn0AEWKID_r1pnGThread__v_+0x431
        V [libjvm.so+0x1ca3aa8] void SystemDictionary::initialize_preloaded_classes(Thread*)+0x118;; __1cQSystemDictionarybCinitialize_preloaded_classes6FpnGThread__v_+0x118
        V [libjvm.so+0x1ca3298] void SystemDictionary::initialize(Thread*)+0x208;; __1cQSystemDictionaryKinitialize6FpnGThread__v_+0x208
        V [libjvm.so+0x1d2a82c] void Universe::genesis(Thread*)+0xbac;; __1cIUniverseHgenesis6FpnGThread__v_+0xbac
        V [libjvm.so+0x1d3073f] void universe2_init()+0x2f;; __1cOuniverse2_init6F_v_+0x2f
        V [libjvm.so+0x14862e8] int init_globals()+0x118;; __1cMinit_globals6F_i_+0x118
        V [libjvm.so+0x1cf5ac2] int Threads::create_vm(JavaVMInitArgs*,bool*)+0x212;; __1cHThreadsJcreate_vm6FpnOJavaVMInitArgs_pb_i_+0x212
        V [libjvm.so+0x15f21ab] int JNI_CreateJavaVM_inner(JavaVM_**,void**,void*)+0x8b;; __1cWJNI_CreateJavaVM_inner6FppnHJavaVM__ppv3_i_+0x8b
        V [libjvm.so+0x15f2529] JNI_CreateJavaVM+0x9;; JNI_CreateJavaVM+0x9
        C [libjli.so+0xbe89] InitializeJVM+0x119;; InitializeJVM+0x119
        C [libjli.so+0x9bb2] JavaMain+0x62;; JavaMain+0x62

              Assignee:
              Coleen Phillimore
              Reporter:
              Jesper Wilhelmsson
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: